# harness-design

./: .gitignore  .kb_project  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  _typos.toml  cog.toml  deny.toml  lefthook.yml  release.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/harness/: Cargo.toml
crates/harness/examples/: claude_code_eval.rs  coding_eval.rs  first_eval.rs
crates/harness/src/: anthropic.rs  bedrock.rs  engine.rs  eval.rs  exec.rs  lib.rs  model.rs  ollama.rs  prompt.rs  ralph.rs  run_record.rs  store.rs  task_spec.rs  test_support.rs  time.rs  tool.rs  workspace.rs
crates/harness/src/tools/: bash.rs  edit_file.rs  list_files.rs  mod.rs  read_file.rs  run_checks.rs  run_command.rs
crates/harness/templates/: nudge_prompt.md  ralph_prompt.md  system_prompt.md  task_prompt.md  task_spec_prompt.md
crates/talos/: Cargo.toml  build.rs
crates/talos/src/: main.rs
crates/talos/tests/: cli.rs
docs/: roadmap.md  session-summaries.md
docs/design/: 01-v1-inner-loop-and-tools.md  02-run-record-schema.md  03-bounded-autonomy.md
docs/research/: 00-overview.md  01-the-agent-loop.md  02-context-engineering.md  03-tools-and-execution.md  04-orchestration-subagents.md  05-durability-and-headless.md  06-reliability-evals-guardrails.md  07-model-layer-features.md
fixtures/broken-adder/: Cargo.toml
fixtures/broken-adder/src/: lib.rs
fixtures/calc/: Cargo.toml  task.json
fixtures/calc/holdout/tests/: holdout.rs
fixtures/calc/src/: eval.rs  lexer.rs  lib.rs  parser.rs
fixtures/csv-ledger/: Cargo.toml  task.json
fixtures/csv-ledger/holdout/tests/: holdout.rs
fixtures/csv-ledger/src/: currency.rs  ledger.rs  lib.rs  parser.rs  report.rs
fixtures/eventbus/: Cargo.toml  task.json
fixtures/eventbus/holdout/tests/: holdout.rs
fixtures/eventbus/src/: bus.rs  lib.rs  model.rs  registry.rs
fixtures/interval-merge/: Cargo.toml
fixtures/interval-merge/src/: lib.rs
fixtures/lru-cache/: Cargo.toml
fixtures/lru-cache/src/: lib.rs
fixtures/taskdeck/: Cargo.toml  task.json
fixtures/taskdeck/holdout/tests/: holdout.rs
fixtures/taskdeck/src/: archive.rs  commands.rs  lib.rs  model.rs  store.rs
fixtures/text-preview/: Cargo.toml
fixtures/text-preview/src/: lib.rs
fixtures/tokenbucket/: Cargo.toml  task.json
fixtures/tokenbucket/holdout/tests/: holdout.rs
fixtures/tokenbucket/src/: lib.rs
fixtures/walrus/: Cargo.toml  task.json
fixtures/walrus/holdout/tests/: holdout.rs
fixtures/walrus/src/: lib.rs
scripts/: publish-talos.sh
