# Virtual workspace root. New crates (model providers, CLI, the GTD build-engine
# adapter) get added to `members` as the harness grows.
[workspace]
resolver = "3"
members = ["crates/harness", "crates/talos"]
# `fixtures/*` are self-contained cargo packages used as eval inputs (e.g.
# `fixtures/broken-adder`, committed deliberately red). Excluding them keeps the
# project's own gates from ever building, testing, or linting fixture code —
# `cargo nextest run --workspace` must never run a fixture's tests.
exclude = ["fixtures/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Jason Weddington"]

# Shared dependency versions live here; member crates opt in with
# `foo.workspace = true`.
[workspace.dependencies]
# askama: compile-time-checked Jinja-like templates. A template referencing a
# missing field is a *build* error, in keeping with "rustc is a gate". Used to
# render the versioned prompt artifacts (`crates/harness/templates/*.md`) into
# strings. MIT OR Apache-2.0.
askama = "0.16"
async-trait = "0.1"
# clap: command-line argument parsing with derive macros. MIT OR Apache-2.0.
clap = { version = "4", features = ["derive"] }
# reqwest pinned to the rustls (ring) TLS backend — no system OpenSSL, no
# native-tls. `default-features = false` drops the native-tls baseline; we
# only opt back into the bits we actually need (`json` for body
# serialization, `rustls-tls` for the rustls + webpki-roots HTTPS stack).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "time"] }
# wiremock is dev-only: a local HTTP mock server so backend adapter tests
# never touch live providers (no API key, no network).
wiremock = "0.6"

# Project-wide lint strictness — the layer the compiler frees budget for.
# Levels are `warn` here (non-blocking local builds); the gate enforces
# `-D warnings`, turning every one of these into a hard failure at commit time.
[workspace.lints.rust]
unsafe_code = "forbid"      # agents must not hand-roll unsafe; compiler-enforced
unused_must_use = "deny"

[workspace.lints.clippy]
# Groups MUST carry priority = -1 so the individual `allow`s below win.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Curated opt-outs of noisy pedantic lints (revisit as the codebase grows):
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
