[package]
name = "harness"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core agent-harness library."

[dependencies]
askama.workspace = true
async-trait.workspace = true
reqwest = { workspace = true }
rusqlite.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true

[lints]
workspace = true
